# strong

./: .gitignore  AGENTS.md  README.md
semantic_unification_from_llm_kg/: .gitignore  .pre-commit-config.yaml  AGENTS.md  COPY_MANIFEST.txt  main.py  pyproject.toml  run_domain_share.py
semantic_unification_from_llm_kg/docs/contracts/: cli_contract.md  run_preflight.md  unified_pipeline_contract.md
semantic_unification_from_llm_kg/scripts/baseline/: run_all.ps1  run_domain_share.ps1  run_sample.ps1
semantic_unification_from_llm_kg/src/configs/: config.py  dotenv_loader.py
semantic_unification_from_llm_kg/src/db/: database_agent.py  plugin_registry.py
semantic_unification_from_llm_kg/src/kg/: init.py  kg_agent.py
semantic_unification_from_llm_kg/src/llm/: description_agent.py  semantic.py
semantic_unification_from_llm_kg/src/pipeline/: orchestration_common.py  run.py  run_auto.py  run_domain_share.py  run_initial.py  run_sampling.py  unified_interface.py
semantic_unification_from_llm_kg/src/query/: alignment_search.py  federated_query.py  local_locator.py  parser.py  query_parser.py  resource.py  target.py
semantic_unification_from_llm_kg/src/service/: kg_service.py  llm_service.py  sample.py  semantic_service.py
semantic_unification_from_llm_kg/src/storage/: ipfs_client.py  registry.py
semantic_unification_from_llm_kg/src/utils/: io.py
semantic_unification_from_llm_kg/tests/: conftest.py
semantic_unification_from_llm_kg/tests/contracts/: test_cli_contract.py
semantic_unification_from_llm_kg/tests/fixtures/: minimal_env.env
semantic_unification_from_llm_kg/tests/golden/: README.md  normalize_rules.json
semantic_unification_from_llm_kg/tests/unit/: test_config_db_registry.py  test_db_plugin_registry.py  test_domain_share_guards.py  test_dotenv_and_ipfs.py  test_federated_query_chain.py  test_kg_agent_guards.py  test_llm_stack.py  test_non_relational_adapter.py  test_orchestration_common_guards.py  test_pipeline_orchestration.py  test_relational_adapter.py  test_run_auto_guards.py  test_run_initial_guards.py  test_run_pipeline_guards.py  (+3 more)
(+53 files in other folders)
