[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "semantic-unification-from-llm-kg"
version = "0.1.0"
description = "Semantic unification pipeline across heterogeneous databases with LLM, IPFS, and chain integration."
requires-python = ">=3.12,<3.13"
dependencies = [
  "cassandra-driver>=3.29.3",
  "clickhouse-driver>=0.2.9",
  "gevent>=25.9.1",
  "happybase>=1.3.0",
  "neo4j>=6.1.0",
  "openai>=1.75.0,<2.0.0",
  "oracledb>=2.5.1",
  "psycopg[binary]>=3.2.10",
  "pymysql>=1.1.1",
  "pymongo>=4.16.0",
  "redis>=7.3.0",
  "requests>=2.32.0,<3.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<0.12.0",
  "types-requests>=2.32.0.20250328",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --maxfail=1"
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "live: tests requiring live IPFS/chain/LLM dependencies",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "tests/*",
  "outputs/*",
  "data/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "data",
  "outputs",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
follow_imports = "skip"
disable_error_code = ["untyped-decorator"]
warn_unreachable = true
show_error_codes = true
pretty = true
files = [
  "tests",
]
exclude = [
  "^outputs/",
  "^data/",
]

[[tool.mypy.overrides]]
module = ["openai.*", "requests.*"]
ignore_missing_imports = true
